test_scripts/errors/continue_outside_loop.stderr
 1 | continue
     ^^^^^^^^
Error: `continue` outside of a loop
